chore: fix z-index

--- a/packages/react-components/src/components/cesium-map/map.css
+++ b/packages/react-components/src/components/cesium-map/map.css
@@ -139,7 +139,6 @@ body[dir='rtl'] .cesium-viewer-fullscreenContainer {
   position: absolute;
   bottom: 10px;
   right: 70px;
-  z-index: 2000;
 }
 
 body[dir='rtl'] .bottomToolsContainer {
